Like anything good in tech, turn it off and on again. If that doesn't work, clear app data and then log back in, close the app, and open it again.

l[Can I see the source?]l
https://github.com/bradsh/ShackBrowse It is a mess. I am not a professional programmer nor do I have any degrees in computer science. I just wanted a shack app so I learned to program.

-->

$ 5.4.6
% v 5.4.6
_ Dec 23, 2016
* Bug Fix: Support for Android 7 multi-window
* Bug Fix: Attempt at fixing link click crash bug
* Bug Fix: Camera fix for Android 7
* Bug Fix: Less buggy with ThomW server failures

$ 5.4.5
% v 5.4.5
_ July 20, 2016
* PostQueue database moved to its own database to avoid threaded locking issues
* Bug Fix: external browser bad link for https
* Bug Fix: Hopefully many of the odd crashes that were due to database locking issues

$ 5.4.4
% v 5.4.4
_ July 14, 2016
* Macros menu cleaned up
* Bug Fix: Bug where post button disppears
* Bug Fix: Another attempt at reigning in refresh threads snackbar
* Bug Fix: Crashes based on odd support library bugs
* Bug Fix: Article viewer opens external links in browser now

$ 5.4.3
% v 5.4.3
_ July 6, 2016
* Bug Fix: Android N preview app crash on some threads (thanks Horn for providing thread ID to test with!)
* Bug Fix: Fixed a bug where refresh threads snackbar appeared when it should not
* Bug Fix: App crash due to database threading issue
* Bug Fix: App crash opening external browser on certain images

$ 5.4.2
% v 5.4.2
_ July 1, 2016
* Just in time for July 4, AMERICA shacktag macro!
* Also rainbow and allcaps macros. Be careful using allcaps on existing shacktags
* Database for starred posts instead of using flat file (more reliable)
* Bug Fix: Disappearing post button with post preview

$ 5.4.1
% v 5.4.1
_ Jun 26, 2016
* Only starred posts from last 18 hours show in latest chatty thread list, all others in Starred Posts section
* Small UI tweaks
* Frontpage articles load much faster